# todo

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  .treefmt.toml  Cargo.toml  README.md  TODO.md  build.rs  default.nix  deny.toml  flake.nix  functions.sh  google.json  result  run.sh  test_aliases.rs
.0/: 0-nvim-switch-to-fzflua.md  0-todo-project-generalization.md  1-github-actions.md  1-nvim-dap.md  1-nvim-nautopairs.md  2-3-config-file-for-auto_redshift.md  2-ValeraLib-auto-type.md  2-assess-time-horizon-prediction-accuracy-SYSTEM.md  2-nvim-typst.md  3-ck-flags.tex  3-discord-notifs.md  3-filechooser.md  3-port-helix-keymaps.md  3-simple-alacritty-add-scroll-rm-vimode.md  4-my_todo-groups.md  4-nvim-TODO-quickfix-list.md  4-nvim-copilot.md  4-simpple-treesitter-objects.md  4-sway-use-kanshi-for-monitor-priorities.md  4-sync-todo-and-phone.md  4-wrap-up-valeralib.md  4_action-sets-notes_move-to-github.md  5-1-reconfigure-nginx.md  5-protocol-codes.md  6-5-compiling-quickfix.md  9-ws-usage-statics.md  README.md  nohup.out  quickfix.md
.0/.conditional/: clothing-store.md  morning.md
.0/.general/: nvim.md  tools.md  uni.md
.0/.think-through/: README.md  tooling.md
.0/news-ai/: main.md  tiny.md  training-data.md
.0/todo_project/: main.md  ui.md
.0/twitter-auto-casual/: drafts.md  main.md
.0/university/: math.md
.0/valera_lib/: main.md  quickfix.md
.cargo/: .clippy.toml  config.toml  log_directives  rust-toolchain.toml
.direnv/: flake-profile-1-link  flake-profile-2-link  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 43r8l1jgq26kzza9kq4fpxngjspwf3rc-source  54338j8jrb2pmllq9mhr2i1pmvcws059-source  714g6clapigzz83jh4gb8r4q9zzndk10-source  mry32amkmfxgrgq9fsjkjwa0k9li8v5w-source  rr1allmsx88garhjfkfsj14z3d9qf8b6-source  s83zrkkxwagd4f0x8fky06b2ffn0v0qh-source  wb6agba4kfsxpbnb5hzlq58vkjzvbsk6-source  x3d704r2qzq7h0m7i04liyzrvnng1pi2-source  yvda1pxghkjblgimig1bmmdrsb5x8f75-source
.github/workflows/: ci.nix  ci.yml  clippy.nix  doc.nix  errors.yml  machete.nix  miri.nix  other.yml  shared.nix  sort.nix  tests.nix  tokei.nix  warnings.yml
.qlty/: qlty.toml
.readme_assets/: description.md  installation.md  other.md  usage.md
activity_monitor/: Cargo.toml
activity_monitor/src/: main.rs
daily_ev/: Cargo.toml
daily_ev/src/: main.rs
daily_stats/: Cargo.toml
daily_stats/src/: main.rs
docs/: ARCHITECTURE.md
docs/dev/: testing.md
examples/: ast.txt  clockify_api_test.rs  config.nix  config.toml  md_parse.rs  pandoc_bench.rs  test_issue.ast.txt  test_issue.md  test_issue.typ  typst_parse.rs
my_todo/: Cargo.toml  run.sh  test.py
my_todo/src/: main.rs
src/: activity_correlation.rs  activity_monitor.rs  blocker.rs  blocker_rewrite.rs  blockers.rs  clockify.rs  config.rs  day_section.rs  do_it.rs  error.rs  github.rs  lib.rs  main.rs  manual_stats.rs  marker.rs  milestones.rs  mock_github.rs  mocks.rs  open.rs  perf_eval.rs  quickfix.rs  shell_init.rs  timer.rs  todos.rs  utils.rs  watch_monitors.rs
src/blocker/: integration.rs  io.rs  mod.rs  operations.rs  source.rs  standard.rs
src/blocker/clockify/: tracking.rs
src/blocker_interactions/: integration.rs  io.rs  mod.rs  operations.rs  source.rs  standard.rs
src/blocker_interactions/clockify/: mod.rs  protocol.rs  tracking.rs
src/issue/: blocker.rs  contents.rs  error.rs  events.rs  marker.rs  mod.rs  types.rs  util.rs
src/open/: command.rs  conflict.rs  fetch.rs  files.rs  format.rs  issue.rs  line.rs  meta.rs  mod.rs  sync.rs  touch.rs  util.rs
src/open_interactions/: command.rs  conflict.rs  fetch.rs  files.rs  format.rs  git.rs  github_sync.rs  meta.rs  mod.rs  sink.rs  sync.rs  touch.rs  tree.rs  util.rs
src/open_interactions/snapshots/: todo__open_interactions__tree__tests__local changed.snap  todo__open_interactions__tree__tests__remote changed.snap
src/snapshots/: todo__mock_github__tests__New Issue.snap  todo__mock_github__tests__mock_sub_issues.snap
tests/integration/: README.md  blocker_format.rs  blocker_integrated.rs  blocker_project_resolution.rs  common.rs  config_warnings.rs  file_naming.rs  fixtures.rs  issue_preservation.rs  main.rs  open_sub_issues.rs  reset_conflict.rs  sync.rs  tracing_utils.rs  tracing_verification.rs
tests/integration/common/: git.rs  mod.rs
