[package]
name = "todo"
version = "0.2.1"
edition = "2021"

[dependencies]
chrono = { version = "^0.4.42", features = ["serde"] }
clap = { version = "^4.5.50", features = ["derive"] }
clap_complete = "4.5.59"
color-eyre = "0.6.5"
config = "^0.15.18"
derive-new = "^0"
derive_more = { version = "2.0.1", features = ["from_str", "display"] }
google-calendar = "^0.7.0"
pandoc = "^0.8.11"
reqwest = { version = "^0.12.24", features = ["blocking", "json"] }
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = { version = "^1.0.145", features = ["std"] }
tempfile = "^3.23.0"
thiserror = "2.0.17"
tokio = { version = "^1.48.0", features = ["rt", "rt-multi-thread"] }
tracing = "^0.1.41"
urlencoding = "^2.1.3"
v_utils = { version = "^2.7.11", features = ["io", "macros", "trades"] } #ga: rm path
xattr = "1.6.1"
xdg = "3.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lints.clippy]
float_cmp = "allow" # is bad for `==` direct comparisons, but `<` and `>` should be allowed
#get_first = "allow" # const fn, so actually more performant
len_zero = "allow" # `.empty()` is O(1) but on &str only
undocumented_unsafe_blocks = "warn"

tabs_in_doc_comments = "allow"
