[package]
name = "todo"
version = "0.6.3"
edition = "2024"

[features]
default = []
is_integration_test = []

[dependencies]
ask_llm = { version = "^2.1.4" }
async-trait = "^0.1.89"
base64 = "0.22"
clap = { version = "^4.5.54", features = ["derive"] }
clap_complete = "4.5.64"
color-eyre = "0.6.5"
config = "^0.15.19"
derive-new = "^0"
derive_more = { version = "2.1.1", features = ["from_str", "display", "from"] }
image = "0.25.9"
jiff = { version = "^0.2", features = ["serde"] }
libwayshot = "0.6.0"
miette = { version = "7", features = ["fancy"] }
pandoc = "^0.8.11"
png = "0.18"
reqwest = { version = "^0.13.1", features = ["blocking", "json"] }
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = { version = "^1.0.148", features = ["std"] }
smart-default = "^0.7"
tempfile = "^3.24.0"
thiserror = "2.0.17"
tokio = { version = "^1.49.0", features = ["rt", "rt-multi-thread"] }
tracing = "^0.1.44"
tracing-subscriber = { version = "^0.3", features = ["env-filter", "json"] }
typst = "0.14.2"
urlencoding = "^2.1.3"
v_utils = { version = "^2.15.19", features = ["io", "async-io", "macros", "trades", "xdg", "cli"] }
xattr = "1.6.1"
xdg = "3.0.0"

[dev-dependencies]
insta = "1.46"
nix = { version = "0.30", features = ["fs"] }
rstest = "0.26"
v_fixtures = "0.1"

[[test]]
name = "integration"
path = "tests/integration/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lints.clippy]
float_cmp = "allow" # is bad for `==` direct comparisons, but `<` and `>` should be allowed
#get_first = "allow" # const fn, so actually more performant
len_zero = "allow" # `.empty()` is O(1) but on &str only
undocumented_unsafe_blocks = "warn"

tabs_in_doc_comments = "allow"
